--- a/lesson-19/css/style.css
+++ b/lesson-19/css/style.css
@@ -9,7 +9,6 @@ body {
     font-family: 'Core Sans C', sans-serif;
     line-height: 1.2;
     font-size: 18px;
-
 }
 
 .menu-open body {
@@ -86,7 +85,7 @@ body {
 }
 
 .item__info {
-    text-shadow: 1px 1px 1px rgb(51, 50, 50);
+    text-shadow: 1px 1px 2px rgb(51, 50, 50);
 }
 
 .info--left {
@@ -120,6 +119,7 @@ body {
     font-size: 34px;
     font-weight: 800;
     line-height: 1.3;
+    text-transform: capitalize;
 }
 
 .info__title:not(:last-child) {
@@ -131,6 +131,7 @@ body {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.251px;
+    text-transform: capitalize;
 }
 
 .item__info span:not(:last-child) {
@@ -142,17 +143,28 @@ body {
 }
 
 .info__link {
-    display: block;
+    display: inline-block;
     font-size: 20px;
     font-weight: 800;
     line-height: 1.5;
-    text-decoration-line: underline;
+    text-transform: capitalize;
+    position: relative;
+}
+
+.info__link::after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    border-bottom: 1px solid #f6f3f3;
     transition: all 0.3s;
 }
 
 @media (any-hover: hover) {
-    .info__link:hover {
-        text-decoration-line: none;
+    .info__link:hover::after {
+        top: 50%;
+        /*width: 0;*/
     }
 }
 
@@ -172,8 +184,8 @@ body {
 
 @media (max-width: 759px) {
     .content__item:nth-child(1n + 1) {
-        grid-column-start: 1;
-        grid-column-end: 2;
+        /*grid-column-start: 1;*/
+        /*grid-column-end: 2;*/
         grid-column: span 2;
     }
 
@@ -181,13 +193,13 @@ body {
         object-position: top;
     }
 
-    .item__info {
-        text-shadow: 1px 1px 1px rgb(35, 35, 35);
-    }
+    /*.item__info {*/
+    /*    text-shadow: 1px 1px 1px rgb(35, 35, 35);*/
+    /*}*/
     
 }
 
-@media (max-width: 392.98px) {
+@media (max-width: 480.98px) { /* 392.98px */
     .page {
         padding: 40px 0 40px 0;
     }
@@ -221,25 +233,16 @@ body {
         max-width: none;
     }
 
-    .item__info {
-        text-shadow: 1px 1px 1px rgb(51, 50, 50);
-    }
+    /*.item__info {*/
+    /*    text-shadow: 1px 1px 1px rgb(51, 50, 50);*/
+    /*}*/
 
 
 }
 
 /*---------------Page. New arrival-----------*/
-.page__new-arrival {
-
-}
-
-.new-arrival {
-}
-
-.new-arrival__container {
-}
-
-.new-arrival__about {
+.page__new-arrival:not(:last-child) {
+    margin-bottom: 50px;
 }
 
 .new-arrival__about:not(:last-child) {
@@ -254,6 +257,7 @@ body {
     display: flex;
     gap: 20px;
     align-items: baseline;
+    text-transform: capitalize;
 }
 
 .about__title::before {
@@ -277,7 +281,6 @@ body {
 }
 
 .content__item-new {
-
 }
 
 .content__image {
@@ -303,7 +306,46 @@ body {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 0.2px;
+    text-transform: capitalize;
 }
+
+@media (any-hover: hover) {
+    .content__item-new:hover .content__title {
+        text-decoration: underline;
+    }
+
+}
+
+/*--------------Page. Big saving zone-----------*/
+.page__saving {
+
+}
+
+.saving__container {
+
+}
+
+.saving__about:not(:last-child) {
+    margin-bottom: 70px;
+}
+
+.saving__content {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    gap: 20px;
+}
+
+.info__saving-title {
+    color: #FFF;
+    font-family: 'Core Sans C', sans-serif;
+    font-size: 28px;
+    font-weight: 600;
+    line-height: 1.3;
+    letter-spacing: 0.56px;
+    text-transform: capitalize;
+}
+
+
 
 
 
