--- a/lesson-19/css/style.css
+++ b/lesson-19/css/style.css
@@ -398,12 +398,10 @@ body {
 
 .saving__content {
     display: grid;
-    /*align-items: start;*/
     grid-template-columns: repeat(6, 1fr);
     gap: 20px;
-    justify-content: end;
-    /*color: #3c4242;*/
     min-height: 240px;
+    justify-content: center;
 }
 
 .content__sav-item {
@@ -411,27 +409,59 @@ body {
     position: relative;
     grid-column: span 2;
     background-color: rgb(196, 186, 167);
-    padding: 64px 0 64px 20px;
+    padding: 30px 15px 40px 20px;
     border-radius: 12px;
     font-family: Causten, sans-serif;
+    display: grid;
+    justify-content: end;
+}
+
+.content__sav-item--big {
+    grid-column: span 3;
+    padding: 55px 90px 60px 0;
+
+}
+
+.content__sav-item--left {
+    justify-content: start;
 }
 
 .item-sav--white {
     color: #FFF;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.73);
 }
 
 .item-sav__image {
     position: absolute;
     top: 0;
     left: 0;
-    /*aspect-ratio: 400 / 393;*/
-    /*object-fit: cover;*/
+    width: 100%;
+    /*height: 100%;*/
+    aspect-ratio: 400 / 393;
+    object-fit: contain;
+    object-position: top;
+}
+
+.item-sav__image--size {
+    aspect-ratio: 610 / 393;
 }
 
 .item-sav__image img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+}
+
+.item-sav__overlay::before {
+    content: '';
+    display: inline-block;
+    border-radius: 12px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(3, 8, 9, 0.12);
+    /*background-color: rgba(33, 33, 33, 0.3);*/
 }
 
 .item-sav__info {
@@ -440,13 +470,41 @@ body {
     max-width: 160px;
 }
 
+.item-sav--padding {
+    padding: 65px 15px 25px 20px;
+}
+
+.item-sav__info--end {
+    text-align: end;
+}
+
+.info-sav--left {
+    display: grid;
+    justify-content: start;
+}
+
+.info-sav--big {
+
+}
+
+
 .info-sav__title {
+    display: inline-block;
     font-family: 'Core Sans C', sans-serif;
     font-size: 28px;
     font-weight: 600;
     line-height: 1.3;
     letter-spacing: 0.56px;
     text-transform: capitalize;
+}
+
+.info-sav__title--big {
+    font-size: 32px;
+    letter-spacing: 0.64px;
+}
+
+.info-sav__title--width {
+    max-width: 104px;
 }
 
 .info-sav__title:not(:last-child) {
@@ -458,35 +516,52 @@ body {
     font-weight: 600;
 }
 
+.info-sav__text--big {
+    font-size: 16px;
+}
+
 .info-sav__text:not(:last-child) {
     margin-bottom: 13px;
 }
 
-.item-sav__info span {
-    display: block;
+.info-sav__sale {
     font-weight: 700;
     text-transform: uppercase;
 
 }
 
-.item-sav__info span:not(:last-child) {
+.info-sav__sale:not(:last-child) {
     margin-bottom: 34px;
+}
+
+.info-sav__sale--big {
+    font-size: 20px;
 }
 
 .info-sav__link {
     display: inline-block;
-    padding: 8px 16px;
+    padding: 10px 25px; /* якщо вказати падінги з макету - відбувається якийсь треш з посиланням*/
     text-align: center;
     font-size: 12px;
     font-weight: 500;
     text-transform: capitalize;
     border-radius: 4px;
-    border: 1px solid #FFF;
+    color: #3C4242;
+    border: 1px solid #3C4242;
     transition: all 0.3s;
 }
 
+.info-sav__link--bg {
+    color: #FFF;
+    border: 1px solid #FFF;
+}
+
+.info-sav__link--border {
+    border: 2px solid #3C4242;
+}
+
 .info-sav__link:not(:first-child) {
-    margin-top: 36px;
+    margin-top: 48px;
 }
 
 .info-sav__link--arrow {
@@ -498,9 +573,59 @@ body {
     width: 23px;
     height: 20px;
     position: absolute;
-    top: -50%;
+    top: -49px;
+    transform: translateX(-50%);
     left: 50%;
-    background: url("../img/icons/arrow.svg") 10% 100%/100% no-repeat;
+    background: url("../img/icons/black-arrow.svg") 10% 100%/100% no-repeat;
+}
+
+.info-sav__link--arrow-white::before {
+    content: '';
+    width: 23px;
+    height: 20px;
+    position: absolute;
+    top: -49px;
+    transform: translateX(-50%);
+    left: 50%;
+    background: url("../img/icons/white-arrow.svg") 10% 100%/100% no-repeat;
+}
+
+.info-sav__button {
+    display: inline-block;
+    border-radius: 4px;
+    background: #3C4242;
+    padding: 8px 16px;
+    text-align: center;
+    font-family: Causten, sans-serif;
+    font-size: 12px;
+    font-weight: 700;
+    text-transform: capitalize;
+    transition: all 0.3s;
+}
+
+.info-sav__button:not(:last-child) {
+    margin-bottom: 33px;
+}
+
+@media (any-hover: hover) {
+    .info-sav__link:hover,
+    .info-sav__link--bg:hover {
+        color: #FFF;
+        border: 1px solid #FFF;
+        background-color: rgba(30, 30, 30, 0.56);
+    }
+
+    .info-sav__link--border:hover {
+        color: #FFF;
+        border: 2px solid #FFF;
+        background-color: rgba(30, 30, 30, 0.56);
+    }
+
+    .info-sav__button:hover {
+        color: #FFF;
+        background-color: rgba(40, 40, 40, 0.47);
+    }
+
 }
 
 
