--- a/lesson-19/css/style.css
+++ b/lesson-19/css/style.css
@@ -296,26 +296,31 @@ body {
 }
 
 .content__item-new {
+
+}
+
+.content__wrapper {
     overflow: hidden;
     border-radius: 12px;
-    aspect-ratio: 1 / 1;
 }
 
 .content__image {
+    /*aspect-ratio: 1 / 1;*/
     width: 100%;
-    height: 100%;
     object-fit: cover;
     border-radius: 12px;
     transition: transform 0.4s;
     transform: scale(1.0001);
+
 }
 
 .content__image img {
+    /*transform: scale(1.0001);*/
     height: 100%;
     width: 100%;
 }
 
-.content__image:not(:last-child) {
+.content__wrapper:not(:last-child) {
     margin-bottom: 37px;
 }
 
