--- a/lesson-19/css/style.css
+++ b/lesson-19/css/style.css
@@ -302,20 +302,18 @@ body {
 .content__wrapper {
     overflow: hidden;
     border-radius: 12px;
+    aspect-ratio: 1 / 1;
 }
 
 .content__image {
-    /*aspect-ratio: 1 / 1;*/
     width: 100%;
+    height: 100%;
     object-fit: cover;
-    border-radius: 12px;
     transition: transform 0.4s;
-    transform: scale(1.0001);
-
+    /*transform: scale(1.0001);*/
 }
 
 .content__image img {
-    /*transform: scale(1.0001);*/
     height: 100%;
     width: 100%;
 }
