--- a/lesson-20/scss/style.css
+++ b/lesson-20/scss/style.css
@@ -73,6 +73,9 @@ body {
   font-size: 18px;
   line-height: 1.2;
 }
+.menu-open body {
+  overflow: hidden;
+}
 
 [class*=__container] {
   max-width: 1200px;
@@ -90,8 +93,137 @@ body {
   flex-grow: 1;
 }
 
-.menu-open body {
-  overflow: hidden;
+.header {
+  font-family: Merriweather, serif;
+  font-weight: 700;
+  background: #FEFBF7;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 50;
+}
+.header__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 40px;
+  min-height: 100px;
+}
+.header__logo {
+  color: #000;
+  font-size: 30px;
+  font-style: italic;
+  text-transform: capitalize;
+  flex-shrink: 0;
+  position: relative;
+  z-index: 10;
+}
+.header__action {
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+  column-gap: 20px;
+  position: relative;
+  z-index: 10;
+}
+.header__icon-menu {
+  display: none;
+}
+.header--position {
+  position: fixed;
+}
+
+.menu__list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  column-gap: 36px;
+  row-gap: 10px;
+  transition: transform 0.4s ease;
+}
+
+.list__link {
+  font-size: 20px;
+  line-height: 1;
+}
+
+.list__item--active {
+  color: #D58417;
+  text-decoration: underline;
+}
+.list__item--arrow {
+  position: relative;
+}
+.list__item--arrow .list__link {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+.list__item--arrow .list__link::after {
+  content: "";
+  flex: 0 0 16px;
+  width: 16px;
+  height: 8px;
+  background: url("../img/icons/header-menu-arrow.png") 0 50%/100% no-repeat;
+  transition: transform 0.4s ease;
+}
+
+.menu__submenu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  padding-top: 47px;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.3s ease;
+  transform: translate(0px, 10px);
+  pointer-events: none;
+}
+
+@media (any-hover: hover) {
+  .list__item--arrow :hover,
+  .menu__submenu {
+    opacity: 1;
+    transform: translate(0px, -10px);
+    visibility: visible;
+    pointer-events: all;
+  }
+}
+.submenu__list {
+  width: 200px;
+  border-radius: 7px;
+  padding: 15px;
+  background-color: rgba(246, 238, 228, 0.85);
+}
+.submenu__item:not(:last-child) {
+  margin-bottom: 10px;
+}
+.submenu__link {
+  font-size: 16px;
+}
+
+.action__item {
+  flex: 0 0 32px;
+  width: 32px;
+  position: relative;
+  transition: transform 0.3s ease;
+}
+.action__item img {
+  max-width: 100%;
+  height: 100%;
+}
+.action__item span {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-radius: 50%;
+  background-color: #FF3333;
+  min-width: 12px;
+  height: 12px;
+  color: #FFF;
+  font-size: 9px;
+  text-align: center;
+  line-height: 1.3;
 }
 
 /*# sourceMappingURL=style.css.map */
